--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "manifest_version": 2,
   "description": "My first Chrome extension.",
   "browser_action": {
-    "default_icon": "world.png"
+    "default_icon": "world.png",
+    "default_popup": "popup.html"
   }
 }
